<resources>
    <!-- Strings title actions bar -->
    <string name="ClimaActivity"> CLIMA</string>
    <string name="NoticiasActivity"> NOTICIAS</string>
    <string name="PrincipalActivity"> MENU</string>
    <string name="BuffetMenuActivity"> MENU BAR</string>
    <string name="CalendarioMenuActivity"> MENU CALENDARIO</string>
    <string name="ListaComidasBarActivity"> LISTA COMIDAS</string>
    <string name="GridComidasBarActivity"> GRID COMIDAS</string>
    <string name="HoyCalendarioActivity"> CALENDARIO</string>
    <string name="MensualCalendarioActivity"> CALENDARIO</string>
    <string name="SemanalCalendarioActivity"> CALENDARIO SEMANAL</string>
    <string name="IngresoActivity"> INGRESO</string>


    <string name="app_name">P.C.T.&amp; I.</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="calendario_niko_niko">Calendario NIKO-NIKO</string>
    <string name="buffet">BAR</string>
    <string name="como_estoy_hoy">Como estoy hoy ?</string>
    <string name="calendario_semanal">Calendario semanal</string>
    <string name="calendario_mensual">Calendario Mensual</string>
    <string name="calendario_niko_niko_semanal">Calendario Niko-Niko SEMANAL</string>
    <string name="calendario_niko_niko_hoy">Calendario Niko-Niko HOY</string>
    <string name="calendario_niko_niko_mensual">Calendario Niko-Niko MENSUAL</string>
    <string name="ingresar">INGRESAR</string>
    <string name="lock">lock</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="noticias">Noticias</string>
    <string name="clima">CLIMA</string>
</resources>
