<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Menu.PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <Button
                android:id="@+id/buttonCalendarioNN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/calendar_heart"
                android:text="@string/calendario_niko_niko"
                android:textAlignment="center"
                android:layout_marginBottom="40dp"/>

            <Button

                android:id="@+id/buttonBuffet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/coffee"
                android:text="@string/buffet"
                android:textAlignment="center"
                android:layout_marginBottom="40dp"/>

            <Button
                android:id="@+id/buttonNoticias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/newspaper"
                android:text="@string/noticias"
                android:textAlignment="center"
                android:layout_marginBottom="40dp"/>

            <Button
                android:id="@+id/buttonClima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/weather"
                android:text="@string/clima"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>