<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Menu.CalendarioMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonCalendarioHoy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:drawableEnd="@drawable/account_heart"
                android:text="@string/como_estoy_hoy" />

            <Button
                android:id="@+id/buttonCalendarioSemanal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:drawableEnd="@drawable/chart_line"
                android:text="@string/calendario_semanal" />

            <Button
                android:id="@+id/buttonCalendarioMesual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/chart_areaspline"
                android:text="@string/calendario_mensual" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>