<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IngresoActivity">

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/account_search"
        android:text="@string/ingresar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableEnd="@drawable/account"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:text="facu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLOCK" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/account_key"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:text="123"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />

    <ImageView
        android:id="@+id/imageViewPOLO"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/imageViewUNLOCK"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_polo"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageViewLOCK"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:paddingTop="20dp"
        android:visibility="visible"
        app:srcCompat="@drawable/lock" />

    <ImageView
        android:id="@+id/imageViewUNLOCK"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        android:paddingTop="20dp"
        android:visibility="visible"
        app:srcCompat="@drawable/unlock" />

</android.support.constraint.ConstraintLayout>